# pysx

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
examples/django_htmx_pyjsx_todo/: README.md  manage.py  pyproject.toml
examples/django_htmx_pyjsx_todo/templates/: base.html  footer.html  header.html
examples/django_htmx_pyjsx_todo/templates/todo_app/: todo_list.html
examples/django_htmx_pyjsx_todo/todo_app/: __init__.py  admin.py  apps.py  models.py  todo_components.px  urls.py  views.py
examples/django_htmx_pyjsx_todo/todo_app/migrations/: 0001_initial.py
examples/django_htmx_pyjsx_todo/todo_project/: settings.py  urls.py
plugin-vscode/: README.md  package.json
pyjsx/: jsx.py  mypy.py  tokenizer.py
tests/: test_import_hook.py  test_tokenizer.py  test_transpilation.py
