[project]
name = "todo-app"
version = "0.1.0"
description = "A simple todo webapp with Django, HTMX, and PyJSX"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "django~=5.0",
    "python_jsx ; python_version >= '3.12' and python_version <= '3.14'",
    "django-htmx>=1.17.0,<2",
]

[tool.uv]

[tool.uv.sources]
python_jsx = { git = "https://github.com/tomasr8/pyjsx.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
